kubernetes/services/base/auth-server.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-server
  template:
    metadata:
      labels:
        app: auth-server
    spec:
      containers:
      - name: auth-server
        image: handsonwk/authorization-server
        imagePullPolicy: Never
        ports:
        - containerPort: 80
        resources:
          limits:
            memory: 350Mi
        volumeMounts:
        - name: config-repo-volume
          mountPath: /config-repo
      volumes:
      - name: config-repo-volume
        configMap:
          name: config-repo-auth-server

---
apiVersion: v1
kind: Service
metadata:
  name: auth-server
spec:
  selector:
    app: auth-server
  ports:
    - port: 80
      targetPort: 80
