kubernetes/services/base/product-composite.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-composite
spec:
  replicas: 1
  selector:
    matchLabels:
      app: product-composite
  template:
    metadata:
      labels:
        app: product-composite
    spec:
      containers:
      - name: comp
        image: handsonwk/product-composite-service
        imagePullPolicy: Never
        ports:
        - containerPort: 80
        resources:
          limits:
            memory: 350Mi
        volumeMounts:
        - name: config-repo-volume
          mountPath: /config-repo
      volumes:
      - name: config-repo-volume
        configMap:
          name: config-repo-product-composite

---
apiVersion: v1
kind: Service
metadata:
  name: product-composite
spec:
  type: NodePort
  selector:
    app: product-composite
  ports:
    - port: 80
      targetPort: 80
      name: http
    - port: 4004
      name: http-mgm
      targetPort: 4004
