kubernetes/services/base/product.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product
spec:
  replicas: 1
  selector:
    matchLabels:
      app: product
  template:
    metadata:
      labels:
        app: product
    spec:
      containers:
      - name: pro
        image: handsonwk/product-service
        imagePullPolicy: Never
        volumeMounts:
        - name: config-repo-volume
          mountPath: /config-repo
        ports:
        - containerPort: 80
        resources:
          limits:
            memory: 350Mi
      volumes:
      - name: config-repo-volume
        configMap:
          name: config-repo-product

---
apiVersion: v1
kind: Service
metadata:
  name: product
spec:
  selector:
    app: product
  ports:
  - port: 80
    targetPort: 80
