kubernetes/services/base/zipkin-server.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zipkin-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zipkin-server
  template:
    metadata:
      labels:
        app: zipkin-server
    spec:
      containers:
      - name: zipkin-server
        image: openzipkin/zipkin:2.12.9
        ports:
        - containerPort: 9411
        resources:
          limits:
            memory: 512Mi

---
apiVersion: v1
kind: Service
metadata:
  name: zipkin-server
spec:
  type: NodePort
  selector:
    app: zipkin-server
  ports:
    - port: 9411
